add gitignore, add folder formulario

--- a/formulario/form.html
+++ b/formulario/form.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uploader con AJAX</title>
+    <title>Envio de Formulario con Fetch</title>
 </head>
 
 <body>
+    <h1>Envio de Formulario con Fetch</h1>
 
-    <main>
-        <input type="file" id="files" name="files" multiple>
-        <progress value="70" max="100"></progress>
-    </main>
 
-    <!-- <script src="uploader.js"></script> -->
+    <script src="form.js"></script>
 </body>
 
 </html>
