add contact-form folder

--- a/contact-form/contact-form.html
+++ b/contact-form/contact-form.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
-    <link rel="stylesheet" href="loader.css">
-    <title>Envio de Formulario con Fetch</title>
+    <link rel="stylesheet" href="contact-form.css">
+    <link rel="stylesheet" href="contact-form-loader.css">
+    <title>Envio de Formulario con Fetch y PHP</title>
 </head>
 
 <body>
 
-    <h1>Envio de Formulario con Fetch</h1>
+    <h1>Envio de Formulario con Fetch y PHP</h1>
 
     <form class="contact-form" action="" method="" >
         <input name="name" class="name" type="text" placeholder="Escribe tu Nombre"
@@ -41,7 +41,7 @@
 
     </form>
 
-    <script src="form.js"></script>
+    <script src="contact-form.js"></script>
 </body>
 
 </html>
