fix: bugfix on uploader files and contact-form files

--- a/contact-form/contact-form.html
+++ b/contact-form/contact-form.html
@@ -14,7 +14,7 @@
 
     <h1>Envio de Formulario con Fetch y PHP</h1>
 
-    <form class="contact-form" action="" method="" >
+    <form class="contact-form">
         <input name="name" class="name" type="text" placeholder="Escribe tu Nombre"
             pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" title="Nombre solo acepta letras y espacios en blanco" required
             data-form>
